@@ -4,91 +4,89 @@
 <head>
 <style>
 head{
-    text-align:center;
- }
- body{
-    background-image: url('https://f8n-production.s3.amazonaws.com/creators/profile/8k9ot6ixg-c654fc15-034d-4a9b-b953-6364dd542030-jpeg-st8ezc.jpeg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 130%;
-    text-align:center;
- }
-.navbar{
+        text-align:center;
+     }
+     body{
+        background-color:#e5e5e5;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: 100% 130%;
+        text-align:center;
+     }
+     .navbar{
     overflow: hidden;
-    background-color: #e88080;
+    background-color: #e88282;
     font-family: Arial;
- }
-.navbar a{
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-}
-.navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: rgb(249, 97, 97);
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
- .main{
-    
- }
+    }
+    .navbar a{
+        float: left;
+        font-size: 16px;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+    .dropdown {
+        float: left;
+        overflow: hidden;
+    }
+    .dropdown .dropbtn {
+        font-size: 16px;
+        border: none;
+        outline: none;
+        color: white;
+        padding: 14px 16px;
+        background-color: inherit;
+        font-family: inherit;
+        margin: 0;
+    }
+    .navbar a:hover, .dropdown:hover .dropbtn {
+        background-color: rgb(249, 97, 97);
+    }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    .dropdown-content a {
+        float: none;
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        text-align: left;
+    }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+    * {box-sizing:border-box}
 </style>
 </head>
 
 <body>
     <div>
         <div class="navbar">
-            <a href="homepage.html">Home</a>
+            <a href="homepage.html">home</a>
             <div class="dropdown">
-                <button class="dropbtn">more top faives
+              <button class="dropbtn">groupbuys/pre-order
                 <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                    <a href="countries.html">top faive countries</a>
-                    <a href="food.html">top faive food</a>
-                    <a href="tanks.html">top faive tanks</a>
-                    <a href="coming soon.html">more coming soon!</a>
-                </div>
+              </button>
+              <div class="dropdown-content">
+                <a href="neo80.html">neo 80</a>
+                <a href="qk80.html">qk80</a>
+                <a href="luminkey80.html">luminkey 80</a>
+                <a href="coming soon.html">more coming soon!</a>
+              </div>
             </div>
             <a href="about us.html">about us</a>
-            <a href="contact us.html">contact us</a>
-        </div>
+          <a href="contact us.html">contact us</a>
+          </div>
     </div>
     <!--this is a comment-->
     <div>
-        <h1>TOP FAIVE COUNTRIES</h1>
+        <h1>catalog</h1>
     </div>
 </body>
