@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
 <head>
@@ -7,17 +6,17 @@
         text-align:center;
      }
      body{
-        background-image: url('https://f8n-production.s3.amazonaws.com/creators/profile/8k9ot6ixg-c654fc15-034d-4a9b-b953-6364dd542030-jpeg-st8ezc.jpeg');
+        background-color:#e5e5e5;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 130%;
         text-align:center;
      }
-    .navbar{
-        overflow: hidden;
-        background-color: #e88080;
-        font-family: Arial;
-     }
+     .navbar{
+    overflow: hidden;
+    background-color: #e88282;
+    font-family: Arial;
+    }
     .navbar a{
         float: left;
         font-size: 16px;
@@ -62,34 +61,194 @@
     .dropdown:hover .dropdown-content {
         display: block;
     }
-     .main{
-        
-     }
+    * {box-sizing:border-box}
+
+    /* Slideshow container */
+    .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+    }
+
+    /* Hide the images by default */
+    .mySlides {
+    display: none;
+    }
+
+    /* Next & previous buttons */
+    .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    }
+
+    /* Position the "next button" to the right */
+    .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+    }
+
+    /* On hover, add a black background color with a little bit see-through */
+    .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+    }
+
+    /* Caption text */
+    .text {
+    color: #f2f2f2;
+    font-size: 20px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+    }
+
+    .text2 {
+     color: black;
+     font-size: 20px;
+     padding: 8px 12px;
+     position: absolute;
+     bottom: 8px;
+     width: 100%;
+     text-align: center;
+    }
+
+    /* Number text (1/3 etc) */
+    .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    }
+
+    .active, .dot:hover {
+    background-color: #717171;
+    }
+
+    /* Fading animation */
+    .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+    }
+
+    @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+    }
 </style>
-    <title>top faive</title>
+    <title>fragrance-keebs</title>
 </head>
 
                         
 <body>
     <div class="navbar">
-        <a href="homepage.html">Home</a>
+        <a href="homepage.html">home</a>
         <div class="dropdown">
-          <button class="dropbtn">more top faives
+          <button class="dropbtn">groupbuys/pre-order
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="countries.html">top faive countries</a>
-            <a href="food.html">top faive food</a>
-            <a href="tanks.html">top faive tanks</a>
+            <a href="neo80.html">neo 80</a>
+            <a href="qk80.html">qk80</a>
+            <a href="luminkey80.html">luminkey 80</a>
             <a href="coming soon.html">more coming soon!</a>
           </div>
         </div>
         <a href="about us.html">about us</a>
       <a href="contact us.html">contact us</a>
-      </div>
+      </div> <br>
+
+      <img src="logo.png" width="20%" height="20%"> <br><br>
+      
 <!--body stuff-->
-    <div>  
-    <h1 id="main">TOP FAIVE</h1>
+<!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="https://www.alexotos.com/wp-content/uploads/2024/02/DSCF0768.jpg" style="width:100%">
+        <div class="text">neo 80</div>
+        </div>
+    
+        <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="https://cdn.myportfolio.com/44c2fc27-a1ba-4d7f-80ab-886a492e5ba9/e267315d-2f88-4a3d-b184-221ebcfe8704_rw_1920.jpg?h=1b7e2638b0fbee1d143e09b883e72f0c" style="width:100%">
+        <div class="text2">qk80</div>
+        </div>
+    
+        <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="https://cdn.myportfolio.com/44c2fc27-a1ba-4d7f-80ab-886a492e5ba9/b2df32d2-fc6b-423d-942c-7b37cb78ab7c_rw_1920.jpg?h=6925ce0717e7632f46a497cebecc32d3" style="width:100%">
+        <div class="text2">luminkey 80</div>
+        </div>
+    
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
+    <br>
+    
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
+    <script>
+                let slideIndex = 1;
+        showSlides(slideIndex);
+
+        // Next/previous controls
+        function plusSlides(n) {
+        showSlides(slideIndex += n);
+        }
+
+        // Thumbnail image controls
+        function currentSlide(n) {
+        showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = slides.length}
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex-1].style.display = "block";
+        dots[slideIndex-1].className += " active";
+        }
+    </script>
+
 </body>
 </html>
