@@ -7,4 +7,9 @@ Helo pls log all changes here tyyyyyyyy or your gae
 17/6/24 10:48am - joon kiat
     -fixed homepage navbar slightly broken 
 
+18/6/24 2.06pm - joon kiat
+    -added logo into page
+    -changed homepage to keyboards including store options
+    -added sliding show for keyboard showcase in homepage
+
 
